Added dangers and country info
